retrieveUnpackaged/objects/Award__c.object
<CustomObject>
    <description>Record of award given to employee.</description>
    <fields>
        <fullName>Authorizing_Official_Name__c</fullName>
        <formula>Owner:User.Supervisor__r.FirstName + &quot; &quot; + Owner:User.Supervisor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorizing Official Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizing_Official_OLD__c</fullName>
        <description>Individual responsible for approving any award over threshold. This should be the Requesting Official&apos;s supervisor.</description>
        <formula>HYPERLINK(&apos;/&apos; + Owner_Contact__r.Supervisor__c , Owner_Contact__r.Supervisor__r.FirstName + &apos; &apos; +  Owner_Contact__r.Supervisor__r.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorizing Official OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizing_Official_Title__c</fullName>
        <description>Authorizing official&apos;s title from the record Owner&apos;s related Contact record.</description>
        <formula>Owner_Contact__r.Supervisor__r.Title</formula>
        <label>Authorizing Official Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizing_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requesting official&apos;s supervisor. Responsible for the award&apos;s first level of approval.</description>
        <label>Authorizing Official</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards_Authorizing_Official</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <description>Type of award given to employee.</description>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QSI</fullName>
                </value>
                <value>
                    <fullName>Time Off</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Group Award</fullName>
                </value>
                <value>
                    <fullName>On-the-Spot</fullName>
                </value>
                <value>
                    <fullName>Title 42</fullName>
                </value>
                <value>
                    <fullName>STAA Awards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Awardee_Direct_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Awardee&apos;s Direct Supervisor. Used when a requesting official submits an award for someone outside of his/her organization.</description>
        <label>Awardee Direct Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Calculated field based on the 2nd component of the Requesting Official&apos;s Department.</description>
        <label>Branch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Budget that the award will be allocated toward.</description>
        <label>Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Document__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Document - Award Budget</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Budgeted_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Award_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of award given to employee (monetary awards only).</description>
        <inlineHelpText>Cash Awards over $2,000 require AO approval. Collective awards over $5,000 for an awardee require two levels of approval.</inlineHelpText>
        <label>Cash Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cincinnati_Office_Justification__c</fullName>
        <description>Required for Cincinnati Union Employees. Justification specific to the Cinc. Union form.</description>
        <inlineHelpText>Required for Awardees in the Cinc. Union. Press and hold the Ctrl key to select multiple options.</inlineHelpText>
        <label>Cincinnati Office Justification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Substantially surpasses performance goals</fullName>
                </value>
                <value>
                    <fullName>Improved performance over the prior period</fullName>
                </value>
                <value>
                    <fullName>Reduced costs, expert performance, increased efficiencies</fullName>
                </value>
                <value>
                    <fullName>Exemplifies core values of the EPA</fullName>
                </value>
                <value>
                    <fullName>Achieves Specific Scientific Advancements</fullName>
                </value>
                <value>
                    <fullName>Prepares outstanding publications</fullName>
                </value>
                <value>
                    <fullName>Improves service to the public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center_Work_Code__c</fullName>
        <description>Work Code/Cost Center/Cost Structure for which the award will be charged against.</description>
        <label>Cost Center/Work Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Funded__c</fullName>
        <label>Date Funded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail_Org__c</fullName>
        <description>Populated if the awardee is on detail. The field will reflect the organization in which the awardee is serving a detail.</description>
        <inlineHelpText>Please enter or edit if the awardee is on detail.</inlineHelpText>
        <label>Detail Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>The third component of the Requesting Officials department.</description>
        <label>Division</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_ID__c</fullName>
        <description>Awardee&apos;s Employee ID</description>
        <formula>Emp_Name__r.Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Awardee&apos;s Name</description>
        <label>Emp Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Awards (Emp Name)</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extent_of_Contribution__c</fullName>
        <description>Extent of Contribution as defined on EPA&apos;s recommendation for incentive award form.</description>
        <label>Extent of Contribution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Broad</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPPS_Number__c</fullName>
        <description>Federal Personnel and Payroll System number. Used to track the award once it is processed in FPPS.</description>
        <inlineHelpText>NOT ENTERED BY REQUESTING OFFICIAL!</inlineHelpText>
        <label>FPPS #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Grade of the Awardee.</description>
        <formula>Emp_Name__r.Grade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Award_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Award_Name_OLD__c</fullName>
        <label>Group Award Name OLD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Award_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Group Award object to determine which awards are part of a group award. The individual awards, though, are processed as normal.</description>
        <inlineHelpText>Create Group Award Names or leverage existing names in order to tag and organize group awards.</inlineHelpText>
        <label>Group Award Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Group_Award__c.CreatedBy.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <infoMessage>Please choose a group award that you have created.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Group_Award__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HR personnel responsible for carrying out post approval functions.</description>
        <label>HR Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award_HR_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IOAA_Approval_Date__c</fullName>
        <description>Date IOAA representative approves the award, if necessary.</description>
        <inlineHelpText>Approval date will be left blank if IOAA approval is not needed.</inlineHelpText>
        <label>IOAA Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IOAA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The designated person with IOAA who would need to approve the award request, if necessary.</description>
        <label>IOAA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IOAA_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incoming_Award__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate reference records that are not part of the workflow, but used for validation calculations.</description>
        <inlineHelpText>Indicates an award that&apos;s only used for validation purposes.</inlineHelpText>
        <label>Incoming Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification_Matrix__c</fullName>
        <formula>HYPERLINK(&quot;https://usepa.sharepoint.com/:b:/r/sites/ORD/OARS/RA/Admin/Awards%20Documents/Justification%20Matrix.pdf?csf=1&amp;e=qLZtGM &quot;, &quot;Justification Matrix&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Justification Matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO__c</fullName>
        <label>LCO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTS_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OTS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTS_Calculator__c</fullName>
        <formula>HYPERLINK(&quot;https://usepa.sharepoint.com/:x:/r/sites/ORD/OARS/RA/Admin/Awards%20Documents/OTS_Calculator_2017.xlsx?d=w9f3c9e253ce24679bab497445cb28b0a&amp;csf=1&amp;e=Bb0aNM&quot;, &quot;OTS Calculator on Sharepoint&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OTS Calculator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupational_Series__c</fullName>
        <formula>Emp_Name__r.Occ_Series__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupational Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_LCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an award is for an individual outside that is outside of the Requesting Official&apos;s organization.</description>
        <inlineHelpText>Please check if the award is going towards an individual outside of your organization.</inlineHelpText>
        <label>Outside LCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outside_ORD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the award is going to an individual outside of the RPIO.</description>
        <inlineHelpText>Please check if the Awardee is outside of ORD. If you do not check this field for non-ORD employees, the award will be at risk of not being processed.</inlineHelpText>
        <label>Outside ORD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outside_Org__c</fullName>
        <description>Evaluates to true if the requesting officials HR Org is not equal to the employee&apos;s HR Org.</description>
        <formula>AND(NOT(ISNULL(Emp_Name__r.Account.Name)), NOT(ISNULL(RO_HR_Org2__c))) &amp;&amp; Emp_Name__r.Account.Name &lt;&gt; RO_HR_Org2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact record related the owner&apos;s user record.</description>
        <label>Owner Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The Contact&apos;s related User Id does not match the Owner&apos;s User Id.</errorMessage>
            <filterItems>
                <field>Contact.User__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Awards (Owner Contact)</relationshipLabel>
        <relationshipName>Owned_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Dept__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <description>The actual amount paid to the employee after taxes, etc., have been taken out.</description>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Period__c</fullName>
        <description>The pay period in which the employee was paid.</description>
        <inlineHelpText>NOT ENTERED BY REQUESTING OFFICIAL!</inlineHelpText>
        <label>Calendar Pay Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>201722</fullName>
                </value>
                <value>
                    <fullName>201723</fullName>
                </value>
                <value>
                    <fullName>201724</fullName>
                </value>
                <value>
                    <fullName>201725</fullName>
                </value>
                <value>
                    <fullName>201726</fullName>
                </value>
                <value>
                    <fullName>201801</fullName>
                </value>
                <value>
                    <fullName>201802</fullName>
                </value>
                <value>
                    <fullName>201803</fullName>
                </value>
                <value>
                    <fullName>201804</fullName>
                </value>
                <value>
                    <fullName>201805</fullName>
                </value>
                <value>
                    <fullName>201806</fullName>
                </value>
                <value>
                    <fullName>201807</fullName>
                </value>
                <value>
                    <fullName>201808</fullName>
                </value>
                <value>
                    <fullName>201809</fullName>
                </value>
                <value>
                    <fullName>201810</fullName>
                </value>
                <value>
                    <fullName>201811</fullName>
                </value>
                <value>
                    <fullName>201812</fullName>
                </value>
                <value>
                    <fullName>201813</fullName>
                </value>
                <value>
                    <fullName>201814</fullName>
                </value>
                <value>
                    <fullName>201815</fullName>
                </value>
                <value>
                    <fullName>201816</fullName>
                </value>
                <value>
                    <fullName>201817</fullName>
                </value>
                <value>
                    <fullName>201818</fullName>
                </value>
                <value>
                    <fullName>201819</fullName>
                </value>
                <value>
                    <fullName>201820</fullName>
                </value>
                <value>
                    <fullName>201821</fullName>
                </value>
                <value>
                    <fullName>201822</fullName>
                </value>
                <value>
                    <fullName>201823</fullName>
                </value>
                <value>
                    <fullName>201824</fullName>
                </value>
                <value>
                    <fullName>201825</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <formula>Emp_Name__r.Pay_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payroll personnel responsible for performing payroll-related functions for the award.</description>
        <label>Payroll Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards_Payroll_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <formula>Emp_Name__r.Position_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RO_HR_Code__c</fullName>
        <description>Requesting Official&apos;s HR organization code.</description>
        <formula>RO_HR_Org2__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RO HR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_HR_Org2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requesting officials HR Org at the time the award was created. If the requesting official was on detail, then the official&apos;s detail org will be listed.</description>
        <label>RO HR Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards (RO HR Org)</relationshipLabel>
        <relationshipName>Awards_HR_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RO_HR_Org__c</fullName>
        <description>Requesting Official&apos;s HR organization name.</description>
        <formula>Owner_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RO HR Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Official_Supervisor_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requesting Official Supervisor Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Official_Supervisor__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requesting Official/Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_IOAA_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the saved award requires IOAA approval. The box should be read-only in the permission set and layout and should only be updated by Apex logic.</description>
        <label>Requires IOAA Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Supervisor_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the saved award requires Supervisor approval. The box should be read-only in the permission set and page layout and should be updated solely by Apex logic.</description>
        <label>Requires Supervisor Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STAA_Award_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>STAA Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sent_to_OHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the record had been sent to OHR (Shared Services Center).</description>
        <label>Sent to OHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Direct Supervisor Approval</fullName>
                </value>
                <value>
                    <fullName>Received by OARS/Approved</fullName>
                </value>
                <value>
                    <fullName>HR Review</fullName>
                </value>
                <value>
                    <fullName>Sent for Union Review</fullName>
                </value>
                <value>
                    <fullName>Awaiting Funding</fullName>
                </value>
                <value>
                    <fullName>Ready for SSC</fullName>
                </value>
                <value>
                    <fullName>To SSC</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ready for Work Codes</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <formula>Emp_Name__r.Step__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor_Approval_Date__c</fullName>
        <description>Date Supervisor approves the record. If the record is automatically approved (doesn&apos;t require Supervisor approval), approval date will equal submitted date.</description>
        <label>Supervisor Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor_Justification__c</fullName>
        <inlineHelpText>If using the group award functionality, this field will automatically assume the justification of the group award.</inlineHelpText>
        <label>Supervisor Justification</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supervisors__c</fullName>
        <formula>Emp_Name__r.Supervisors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Off_Amount__c</fullName>
        <description>Amount of time-off hours given to employee.</description>
        <inlineHelpText>Time Off awards greater than the awardee&apos;s normal work day require AO approval.</inlineHelpText>
        <label>Time Off Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_42_SL_ST_Award_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Title 42,SL, ST Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Emp_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Award_Amount_on_Submit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Reports the cumulative value of cash awards the Awardee has received FY to date, at the time of the award submission.</description>
        <inlineHelpText>Reports the cumulative value of cash awards the Awardee has received FY to date, at the time of the award submission.</inlineHelpText>
        <label>Total Awards on Submit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Time_Off_on_Submit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Reports the cumulative value of time off awards the Awardee has received CY to date, at the time of the award submission.</description>
        <inlineHelpText>Reports the cumulative value of time off awards the Awardee has received CY to date, at the time of the award submission.</inlineHelpText>
        <label>Total Time Off on Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Two_Page_Form_Required__c</fullName>
        <formula>Requires_IOAA_Approval__c ||  Requires_Supervisor_Approval__c || Outside_ORD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2-Page Form Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Benefit__c</fullName>
        <label>Type of Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tangible</fullName>
                </value>
                <value>
                    <fullName>Intangible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Union_Review_Date__c</fullName>
        <description>Date award was sent for union review, if necessary.</description>
        <label>Union Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Union_Review_Status__c</fullName>
        <description>Status of an award when under union review consideration.</description>
        <label>Union Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent for Union Review</fullName>
                </value>
                <value>
                    <fullName>Union Approved</fullName>
                </value>
                <value>
                    <fullName>Union Rejected</fullName>
                </value>
                <value>
                    <fullName>Union Review Not Necessary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_of_Benefit__c</fullName>
        <description>Value of Benefit as defined on EPA&apos;s recommendation for incentive award form.</description>
        <label>Value of Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Substantial</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Code_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>NOT ENTERED BY REQUESTING OFFICIAL!</inlineHelpText>
        <label>Work Code Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards (Cost Center)</relationshipLabel>
        <relationshipName>Cost_Center</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Code__c</fullName>
        <formula>Work_Code_Lookup__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Code</label>
        <type>Text</type>
    </fields>
    <label>Award</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Emp_Name__c</columns>
        <columns>Requesting_Official_Supervisor__c</columns>
        <columns>Award_Type__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Budget__c</columns>
        <columns>Branch__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Funded</fullName>
        <columns>NAME</columns>
        <columns>Emp_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>LCO__c</columns>
        <columns>Division__c</columns>
        <columns>Branch__c</columns>
        <columns>Work_Code_Lookup__c</columns>
        <columns>Work_Code__c</columns>
        <columns>Pay_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Funded</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award__c.Standard_Award</value>
        </filters>
        <label>Funded</label>
    </listViews>
</CustomObject>